--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bytemuck = "1.21.0"
 glfw = "0.59.0"
 tokio = { version = "1.43.0", features = ["full"] }
 wgpu = "24.0.1"
